// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Debug production issues on Azure Container Apps and Azure Functions using logs, KQL, and health checks. Focuses on image pull failures, cold starts, health probe issues, and function invocation failures. WHEN: debug production issues, troubleshoot container apps, troubleshoot function apps, troubleshoot Azure Functions, analyze logs with KQL, fix image pull failures, resolve cold start issues, investigate health probe failures, check resource health, view application logs, find root cause of errors, function app not working.",
  "extractedKeywords": [
    "analyze",
    "application",
    "apps",
    "azure",
    "cause",
    "check",
    "checks",
    "cli",
    "cold",
    "container",
    "debug",
    "diagnostic",
    "diagnostics",
    "errors",
    "failures",
    "find",
    "focuses",
    "function",
    "functions",
    "health",
    "image",
    "investigate",
    "invocation",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "probe",
    "production",
    "pull",
    "resolve",
    "resource",
    "root",
    "start",
    "starts",
    "troubleshoot",
    "using",
    "view",
    "when",
    "with",
    "working",
  ],
  "name": "azure-diagnostics",
}
`;

exports[`azure-diagnostics - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "analyze",
  "application",
  "apps",
  "azure",
  "cause",
  "check",
  "checks",
  "cli",
  "cold",
  "container",
  "debug",
  "diagnostic",
  "diagnostics",
  "errors",
  "failures",
  "find",
  "focuses",
  "function",
  "functions",
  "health",
  "image",
  "investigate",
  "invocation",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "probe",
  "production",
  "pull",
  "resolve",
  "resource",
  "root",
  "start",
  "starts",
  "troubleshoot",
  "using",
  "view",
  "when",
  "with",
  "working",
]
`;
